Repaired illustration on smaller devices, removed help.hbs

--- a/public/css/block.css
+++ b/public/css/block.css
@@ -3,6 +3,7 @@
     text-align: center;
     color: #fafafa;
     margin-top: 75px;
+    margin-bottom: 125px;
     display: none;
     animation: mymove 1s;
 }
